# kobo-highlights

./: .gitignore  README.md  config.ini  kobo_highlights.py  pyproject.toml  requirements.txt  setup.py
kobo_highlights/: __init__.py  __main__.py  highlights_extractor.py  kobo_highlights.py
tests/: __init__.py  test_extractor.py
