[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "kobo-highlights"
authors = [
    {name = "fidacura", email = "hello@fidacura.xyz"},
]
description = "A tool to extract highlights from Kobo devices"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["version"]

[project.scripts]
kobo-highlights = "kobo_highlights:main"

[tool.setuptools]
packages = ["kobo_highlights"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"

[tool.mypy]
strict = true